--- a/Achievements.css
+++ b/Achievements.css
@@ -117,6 +117,7 @@ body {
     justify-content: center;
     color: white;
     flex-direction: column;
+    padding-bottom: 10%;
 }
 
 .leadership h3{
